@@ -59,14 +59,16 @@
 		<javadoc.skip>true</javadoc.skip>
 		<maven.javadoc.skip>${javadoc.skip}</maven.javadoc.skip>
 
-		<saalfx.version>0.4.1</saalfx.version>
+		<saalfx.version>0.5.0</saalfx.version>
 
 		<!--		has to be version 2.6.1 with logback-1.2.3. If parent pom-scijava updates logback version, this
 								probably has to be udpated as well. -->
-		<janino.version>2.6.1</janino.version>
+		<janino.version>3.0.7</janino.version>
+		<logback.version>1.4.0</logback.version>
+		<slf4j.version>2.0.0</slf4j.version>
 
 		<!-- JavaFx Version-->
-		<javafx.version>16</javafx.version>
+		<javafx.version>18.0.1</javafx.version>
 
 		<n5.version>2.5.0</n5.version>
 		<n5-hdf5.version>1.3.0</n5-hdf5.version>
@@ -76,6 +78,7 @@
 		<n5-zarr.version>0.0.6</n5-zarr.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 		<dokka.version>1.4.30</dokka.version>
+		<jna.version>5.11.0</jna.version>
 		<!--<enforcer.skip>true</enforcer.skip>-->
 	</properties>
 
@@ -101,7 +104,7 @@
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-imglib2</artifactId>
-			<version>4.2.1</version>
+			<version>4.4.0</version>
 		</dependency>
 
 		<dependency>
@@ -177,7 +180,7 @@
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
-			<version>5.12.0</version>
+			<version>6.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
@@ -213,8 +216,14 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk-platform-logging</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 		<!--		janino & commons-compiler is needed for conditionals inside logback xml -->
 		<dependency>
@@ -542,6 +551,12 @@
 			<groupId>org.fxmisc.richtext</groupId>
 			<artifactId>richtextfx</artifactId>
 			<version>0.10.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -921,7 +936,6 @@
 						<configuration>
 							<mainClass>org.janelia.saalfeldlab.paintera.Paintera</mainClass>
 							<options>
-								<option>--illegal-access=permit</option>
 								<option>--add-opens=javafx.base/javafx.util=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.event=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED</option>
@@ -961,7 +975,6 @@
 							<options>
 								<option>-Dglass.disableGrab=true</option>
 								<option>-agentlib:jdwp=transport=dt_socket,server=n,address=localhost:5005,suspend=y</option>
-								<option>--illegal-access=permit</option>
 								<option>--add-opens=javafx.base/javafx.util=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.event=ALL-UNNAMED</option>
 								<option>--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED</option>
